# MaxReduce

./: .gitattributes  .gitignore  .gitmodules  NOTICE  README.md  build_images.sh  ingestion.md  new_filters.md
ErrorCorrectionCodeFinal/ErrorCorrectionCodeFinal/ErrorCorrection/: .classpath  .project  RunSequence
MaxReduce/: build_images.sh
MaxReduce/code/elga/: replicationmap.hpp
MaxReduce/code/filters/: BTC_BASED_utxo_edges.hpp  BTC_tx_subgraph_search.cpp  python_ZEC_get_block.pyx
MaxReduce/code/include/: dbkey.h  pando_map.hpp  par_db_access.hpp  par_db_client.hpp  par_db_proxy.hpp  par_db_thread.hpp  seq_db.hpp
MaxReduce/code/pybind11/: pando.py
MaxReduce/code/python_filter_template/: Pando.pxd  python_template.cpp
MaxReduce/code/src/: pando_client.cpp  pando_top.cpp
MaxReduce/code/test/: test_dbkey.cpp  test_filter_BTC_block_dataset_creation.cpp  test_filter_BTC_block_number_to_tx.cpp  test_filter_BTC_tx_out_dataset_creation.cpp  test_filter_BTC_tx_out_edges.cpp  test_filter_BTC_vout_addrs.cpp  test_filter_ETH_smart_contract_decode.cpp  test_filter_ETH_tx_dataset_creation_dup_addrs.cpp  test_filter_ZCASH_tx_graph.cpp  test_filter_ZEC_block_to_tx.cpp  test_filter_ZEC_block_to_txtime.cpp  test_filter_ZEC_utxo_edges.cpp  test_filter_etl_tokens.cpp  test_filter_exchange_rates.cpp  test_filter_findTether.cpp  test_filter_pair_ShapeShift.cpp  test_find.cpp  test_python_api.py
MaxReduce/env/: pando_python  pando_run
code/: CMakeLists.txt
code/elga/: address.hpp  timer.hpp
code/filters/: BNB_block_dataset_creation.cpp  BNB_block_to_txtime.cpp  BNB_tx_dataset_creation.cpp  BNB_tx_edges.pyx  BNB_tx_vals.cpp  BTC_BASED_block_number_to_tx.hpp  BTC_BASED_block_to_tx.hpp  BTC_BASED_vout_addrs.hpp  BTC_block_number_to_tx.cpp  BTC_block_to_tx.cpp  BTC_block_to_txtime.cpp  BTC_tx_in_dataset_creation.cpp  CMakeLists.txt  DOGE_block_dataset_creation.cpp  DOGE_block_number_to_tx.cpp  DOGE_tx_in_edges.cpp  DOGE_tx_out_dataset_creation.cpp  DOGE_utxo_edges.cpp  DOGE_vout_addrs.cpp  ETH_BASED_tx_dataset_creation.hpp  ETH_BASED_tx_edges.pxd  ETH_block_dataset_creation.cpp  ETH_tx_dataset_creation.cpp  ETH_tx_edges.pyx  ETH_tx_vals.cpp  Omni_tx_vals.cpp  ShapeShiftConvert.cpp  ZEC_block_to_txtime.cpp  ZEC_tx_in_edges.cpp  etl_token_transfers.cpp  etl_tokens.cpp  findShapeShiftPairs.cpp  helpers.hpp  round_tx_vals.cpp
code/filters/ETH_smart_contract/: ETH_smart_contract_decode.cpp  decode.py
code/filters/blockchain/: BNB_block_to_tx.cpp  BTC_BASED_tx_vals.hpp  BTC_BASED_utxo_stats.hpp  BTC_block_dataset_creation.cpp  BTC_tx_in_edges.cpp  BTC_tx_out_dataset_creation.cpp  BTC_vout_addrs.cpp  DOGE_block_to_tx.cpp  DOGE_block_to_txtime.cpp  DOGE_tx_in_dataset_creation.cpp  DOGE_tx_out_edges.cpp  DOGE_tx_subgraph_search.cpp  DOGE_tx_vals.cpp  DOGE_utxo_stats.cpp  ETH_BASED_block_dataset_creation.hpp  ETH_BASED_block_to_tx.hpp  ETH_BASED_block_to_txtime.hpp  ETH_BASED_tx_vals.hpp  ETH_block_dataset_creation.cpp  ETH_block_to_tx.cpp  ETH_block_to_txtime.cpp  ETH_tx_dataset_creation.cpp  ETH_tx_edges.pyx  ETL_tx_vals.pyx  ShapeShiftConvert.cpp  ZEC_block_to_tx.cpp  ZEC_tx_out_edges.cpp  ZEC_tx_vals.cpp  ZEC_utxo_edges.cpp  ZEC_utxo_stats.cpp  etl_token_transfers.cpp  exchange_rates.cpp  findTether.cpp
code/filters/blockchain/ETH_smart_contract/: get_signatures.py
code/filters/blockchain/find.rust/src/: lib.rs
code/include/: alg_db.hpp  dbentry.hpp  dbkey.h  pando_map.hpp  pando_map_client.hpp  par_db.hpp  par_db_responder.hpp  par_db_thread.hpp  pigo.hpp  random_key_gen.hpp  seq_db.hpp  terr.hpp  util.hpp
code/pybind11/: CMakeLists.txt  pando.py  python_api.cpp
code/python_filter_template/: Pando.pxd  filter_lib.pxd
code/src/: pando_pardb.cpp  pando_proxy.cpp
code/test/: CMakeLists.txt  test_alg_db.cpp  test_filter_BNB_tx_vals.cpp  test_filter_BTC_utxo_edges.cpp  test_filter_BTC_utxo_stats.cpp  test_filter_ETH_block_dataset_creation.cpp  test_filter_ETH_tx_edges.cpp  test_filter_ZEC_utxo_stats.cpp  test_filter_etl_token_transactions.cpp  test_filter_exchange_rates.cpp  test_filter_round_tx_vals.cpp  test_gas.cpp  test_pando_map.cpp  test_par_alg_db.cpp  test_par_db.cpp  test_par_db_filters.cpp  test_python_api.py  test_seq_db.cpp  testlib_non_filter.cpp  testlib_simple.cpp
code/test/data/: simple_ethereum.txt
code/test/data/ShapeShiftData/: combo.py
code/test/data/ethereum/: etl_token_transfers.txt  simple_etl_tokens.txt
code/test/data/exchange_rates/: token_exchange_rates.txt
code/test/data/exchange_rates/crypto_data_download/: README.md  convert_to_pando.py  crawl.sh
code/test/filters/: test_algdb_simple_group.cpp  test_pardb_filters_remove_tag.cpp  test_pardb_filters_subscribe_and_create.cpp  test_python_filter_import_libs.pyx  test_python_filter_pack_chain_info.pyx  test_python_filter_update_entry_val_other.pyx
env/: pando_build  pando_client  pando_mon  requirements_build.txt  requirements_python.txt
experiments/: README.md  graph_scalability.py
experiments/baseline/: .gitignore  download_hadoop.sh  hadoop.sbatch
experiments/data/: convert_fastq_to_pando.py  create-product-engagement-dataset.sh  install_data.sh  make_dir_of_size.sh  make_product_dir_of_size.sh  new-create-product-engagement-dataset.sh
experiments/scalability/: README.md  Snakefile  config.cfg  graph_scalability.py  make_dir_of_size.sh  par-script.py  pardb.sbatch  run_experiment.sh  scalability-experiment.sh  script.sh
experiments/scalability/deprecated/: par-pipeline-script.py  par-shuffle-script.py  scalability-experiment.sh  seq-shuffle-script.py
experiments/scalability/filters/: pipeline.txt  product_engagement.txt  short_reads.txt  shuffle.txt
experiments/scalability/pipeline/: par-pipeline-script.py  scalability-experiment-pipeline.sh
slurm/: pardb.internal  pardb.sbatch
src/: LICENSE  README.md
src/code/: compile_filters.cmake
src/code/src/: CMakeLists.txt  pando_mon.cpp  pando_pardb.cpp  pando_responder.cpp
src/env/: pando_base_os  pando_build  pando_dev  pando_jupyter  pando_pardb  pando_proxy  pando_top
src/slurm/: pardb.internal
(+167 files in other folders)
